examples/test/testpolicy16035.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16035
  namespace: namespace68
spec:
  podSelector:
    matchLabels:
      key28: value17
      key24: value14
      key4: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value18
      podSelector:
        matchLabels:
          key42: value48
